--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -13,7 +13,7 @@
 @line-height: 150%;
 
 @color-text:        #000;
-@color-link:        #de1879;
+@color-link:        #000;
 @color-link-active: #666;
 
 @color-pohyb:    #ca220f;
@@ -64,8 +64,6 @@
 	header[role="banner"] {
 		display: none;
 	}
-
-
 
 	.rainbowButton {
 		.button;
@@ -129,8 +127,8 @@ p {
 
 a {
 	color: @color-link;
-	text-decoration: none;
 	border-bottom: 1px solid @color-link;
+	text-decoration: none;
 
 	&:hover {
 		color: @color-link-active;
