--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -751,6 +751,9 @@ footer[role="general"] .links li {
 .manifestoButtonContainer {
   margin: 1.5em 0 5em 0;
 }
+.contactOptions {
+  margin: 2em 0;
+}
 .contactSegment {
   text-align: center;
 }
