--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -865,6 +865,10 @@ footer[role="general"] {
 	margin: 1.5em 0 5em 0;
 }
 
+.contactOptions {
+	margin: 2em 0;
+}
+
 .contactSegment {
 	text-align: center;
 
