--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -781,3 +781,10 @@ footer[role="general"] .links li {
 .donateButton {
   margin: 2em 0;
 }
+.kolo {
+  background-image: url('kolo.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 1000px;
+}
