--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -904,3 +904,11 @@ footer[role="general"] {
 .donateButton {
 	margin: 2em 0;
 }
+
+.kolo {
+	background-image: url('kolo.png');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	height: 1000px;
+}
