--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -694,7 +694,7 @@ footer[role="general"] .links li {
 }
 .blackButton:hover {
   color: white;
-  background-color: #000000;
+  background-color: #de1879;
 }
 .programStoryHeader {
   color: white;
