--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -805,7 +805,7 @@ footer[role="general"] {
 
 	&:hover {
 		color: white;
-		background-color: @color-link;
+		background-color: @color-accent;
 	}
 
 }
