--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -938,3 +938,23 @@ footer[role="general"] {
 	background-size: contain;
 	height: 1000px;
 }
+
+.postTitle {
+	.proxima;
+	font-weight: 900;
+	font-size: 4em;
+	line-height: @line-height * .65;
+}
+
+.postDetails {
+
+}
+
+.postContent {
+
+	p, p.lead {
+		font-size: 1.2em;
+		line-height: @line-height;
+	}
+
+}
