--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -962,3 +962,18 @@ footer[role="general"] {
 	}
 
 }
+
+.manifest {
+
+	h2 {
+		.proxima;
+		font-weight: 900;
+	}
+
+	p, p.lead {
+		.font-size-larger;
+		line-height: @line-height;
+	}
+
+
+}
