--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -824,3 +824,12 @@ footer[role="general"] .links li {
   font-size: 1.2em;
   line-height: 150%;
 }
+.manifest h2 {
+  font-family: "proxima-nova", sans-serif;
+  font-weight: 900;
+}
+.manifest p,
+.manifest p.lead {
+  font-size: 1.2em;
+  line-height: 150%;
+}
