--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -827,6 +827,7 @@ footer[role="general"] .links li {
 .manifest h2 {
   font-family: "proxima-nova", sans-serif;
   font-weight: 900;
+  margin: 2em 0 1em 0;
 }
 .manifest p,
 .manifest p.lead {
