--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -968,7 +968,7 @@ footer[role="general"] {
 	h2 {
 		.proxima;
 		font-weight: 900;
-		margin: 2em 0 1em 0;
+		margin: 1em 0 .5em 0;
 	}
 
 	p, p.lead {
