--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -968,12 +968,18 @@ footer[role="general"] {
 	h2 {
 		.proxima;
 		font-weight: 900;
-		margin: 1em 0 .5em 0;
+		margin: 1.5em 0 .5em 0;
 	}
 
 	p, p.lead {
 		.font-size-larger;
 		line-height: @line-height;
+
+		strong {
+			.proxima;
+			font-weight: 700;
+		}
+
 	}
 
 
