--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -871,6 +871,7 @@ footer[role="general"] .links li {
   padding: .4em;
   margin: 0;
   border: 2px solid black;
+  outline: 0;
 }
 @media screen and (max-width: 860px) {
   .kolo form input,
@@ -893,6 +894,10 @@ footer[role="general"] .links li {
 .kolo form input[type="submit"],
 .kolo form button[type="submit"] {
   text-transform: uppercase;
+}
+.kolo form input:focus,
+.kolo form button:focus {
+  outline: 0;
 }
 .postTitle {
   font-family: "proxima-nova", sans-serif;
