--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -1020,6 +1020,7 @@ footer[role="general"] {
 
 			&[type="submit"] {
 				text-transform: uppercase;
+				margin-left: -1px;
 			}
 
 			&:focus {
