--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -16,7 +16,7 @@
 .page-template-page-homepage-php h1 {
   margin: 2em 0 1em 0;
   display: block;
-  background-image: url('logo_both.png');
+  background-image: url('logo_pirati.png');
   background-size: contain;
   background-repeat: no-repeat;
 }
