--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -919,7 +919,7 @@ footer[role="general"] {
 		border-right: 1px dotted @color-text;
 
 		@media screen and (max-width: @screen-xs) {
-			border: none;
+			border-right: none;
 		}
 
 	}
