--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -918,7 +918,7 @@ footer[role="general"] {
 	&.meetings {
 		border-right: 1px dotted @color-text;
 
-		@media screen and (max-width: @screen-xs) {
+		@media screen and (max-width: @screen-sm) {
 			border-right: none;
 		}
 
