--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -635,8 +635,8 @@ footer[role="general"] {
 		border-color: white;
 
 		&:hover {
-			color: @color-link;
-			border-color: @color-link;
+			color: @color-accent;
+			border-color: @color-accent;
 		}
 
 		&.icon {
