--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -560,7 +560,7 @@ footer[role="general"] .links li {
 }
 .candidateContacts a.icon:hover i {
   color: white;
-  background: #000000;
+  background: #de1879;
 }
 .candidateContacts i {
   color: black;
