--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -646,7 +646,7 @@ footer[role="general"] {
 
 				i {
 					color: white;
-					background: @color-link;
+					background: @color-accent;
 				}
 
 			}
