--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -1053,11 +1053,17 @@ footer[role="general"] {
 
 }
 
-.manifest {
+.longCopy {
 
 	h2 {
 		.proxima;
 		font-weight: 900;
+		margin: 1.5em 0 .5em 0;
+	}
+
+	h3 {
+		.proxima;
+		font-weight: 700;
 		margin: 1.5em 0 .5em 0;
 	}
 
