--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -1067,6 +1067,10 @@ footer[role="general"] {
 		margin: 1.5em 0 .5em 0;
 	}
 
+	ol {
+		padding: 0;
+	}
+
 	p, p.lead {
 		.font-size-larger;
 		line-height: @line-height;
