--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -921,6 +921,9 @@ footer[role="general"] .links li {
   font-weight: 700;
   margin: 1.5em 0 .5em 0;
 }
+.longCopy ol {
+  padding: 0;
+}
 .longCopy p,
 .longCopy p.lead {
   font-size: 1.2em;
