--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -755,9 +755,19 @@ footer[role="general"] {
 	display: inline-block;
 	background: black;
 	color: white;
-	padding: .75em 0;
+	padding: .5em;
 	margin: 0 0 .5em 0;
 	border-radius: 50%;
+	box-sizing: border-box;
+	vertical-align: middle;
+
+	.middle {
+		display: block;
+		position: relative;
+		top: 50%;
+		transform: translateY(-50%);
+	}
+
 }
 
 .candidateBio * {
