--- a/wp-content/themes/chcu/style.less
+++ b/wp-content/themes/chcu/style.less
@@ -134,6 +134,7 @@ a {
 	color: @color-link;
 	border-bottom: 1px solid @color-link;
 	text-decoration: none;
+	font-size: 1em;
 
 	&:hover {
 		color: @color-link-active;
@@ -169,10 +170,6 @@ a {
 	&[data-topic="bydleni"]  { color: @color-bydleni; border-color: @color-bydleni; }
 	&[data-topic="zdravi"]   { color: @color-zdravi; border-color: @color-zdravi; }
 
-}
-
-* a {
-	font-size: 1em;
 }
 
 hr {
@@ -774,7 +771,7 @@ footer[role="general"] {
 
 }
 
-.candidateBio * {
+.candidateBio {
 	.font-size-larger;
 	line-height: 150%;
 
