--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -819,7 +819,7 @@ footer[role="general"] .links li {
   margin: 2em 0;
 }
 .kolo {
-  background-image: url('kolo.png');
+  background-image: url('images/TO_CHCES.gif');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
