--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -816,7 +816,7 @@ footer[role="general"] .links li {
   margin: 1em auto;
 }
 .donateButton {
-  margin: 2em 0;
+  margin: 2em auto;
 }
 .kolo {
   background-image: url('images/TO_CHCES.gif');
