--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -816,6 +816,7 @@ footer[role="general"] .links li {
   margin: 1em auto;
 }
 .donateButton {
+  text-align: center;
   margin: 2em auto;
 }
 .kolo {
