--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -819,6 +819,9 @@ footer[role="general"] .links li {
   text-align: center;
   margin: 2em auto;
 }
+.donateButton .imgResponsive {
+  display: inline-block;
+}
 .kolo {
   background-image: url('images/TO_CHCES.gif');
   background-position: center center;
