--- a/wp-content/themes/chcu/style.css
+++ b/wp-content/themes/chcu/style.css
@@ -819,7 +819,7 @@ footer[role="general"] .links li {
   text-align: center;
   margin: 2em auto;
 }
-.donateButton .imgResponsive {
+.donateButton .img-responsive {
   display: inline-block;
 }
 .kolo {
